// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render FieldFilter with schema and value 1`] = `
Array [
  <div>
    <button
      class="button icon"
      type="button"
    >
      <span
        aria-label="fa-filter"
        class="fa fa-filter buttonIcon"
      />
      <span
        aria-label="su-angle-down"
        class="su-angle-down dropdownIcon"
      />
    </button>
  </div>,
  <span>
    <button
      class="chip primary small clickable"
    >
      First name
      <span
        aria-label="su-times"
        class="su-times clickable icon"
        role="button"
        tabindex="0"
      />
    </button>
  </span>,
  <span>
    <button
      class="chip primary small clickable"
    >
      Last name
      <span
        aria-label="su-times"
        class="su-times clickable icon"
        role="button"
        tabindex="0"
      />
    </button>
  </span>,
]
`;

exports[`Render empty FieldFilter 1`] = `
<div>
  <button
    class="button icon"
    type="button"
  >
    <span
      aria-label="fa-filter"
      class="fa fa-filter buttonIcon"
    />
    <span
      aria-label="su-angle-down"
      class="su-angle-down dropdownIcon"
    />
  </button>
</div>
`;
